# leozhang2056

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  PROJECTS_COMPLIANCE_REPORT.md  PROJECT_GUIDE_CN.md  README.md  check_broken_refs.py  distill_summary.md  generate.py  generate_android_cv.py  index.md  jd.txt  jd_aia_integration.txt  jd_aimer.txt  jd_airnz_android.txt  jd_atom_intelligence.txt  jd_aut_ai_centre.txt  jd_aut_bi_developer.txt  jd_aws_dc_trainee.txt  jd_brightspark.txt  jd_emerge.txt  jd_fair_dinkum_builds.txt  jd_fiserv_android.txt  jd_halter.txt  jd_halter_sem.txt  jd_inde_ai_automation.txt  jd_placeme.txt  jd_placeme_backend.txt  jd_plexure.txt  jd_sequent.txt  jd_showcase.txt  jd_smartar.txt  jd_talent_army.txt  jd_temperzone.txt  jd_trimble_embedded.txt  jd_westpac.txt  leo_zhang_resume.md  patch_gemini_oral.py  pyproject.toml  (+4 more)
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.cursor/: hooks.json
.mimocode/: .cron-lock
Interview/: .gitignore  100_Small_Talk_Handbook.md  AUT_NZ_career_resources.md  IT_English_.md  README.md  behavioral.yaml  behavioral_common_qa.md  index.yaml  interview_guide.md  qa_backup.md  recommendations.txt  role_specific.yaml  technical.yaml
interview_qa/: IT行业英语_42课时_QA.md  README.md  behavioral.yaml  behavioral_common_qa.md  resource.txt  role_specific.yaml  technical.yaml
jd_archive/: JD__accesso_dexibit_senior_software_engineer.txt  JD__aut_senior_developer.txt  JD__datacom_senior_developer.txt  aa_technology_support_engineer.txt  absolute_it_software_engineer.txt  agora_junior_mobile_developer.txt  (+137 more)
(+271 files in other folders)
